--- a/Teacher_Panel/Student/teacher-students.css
+++ b/Teacher_Panel/Student/teacher-students.css
@@ -22,3 +22,18 @@ tr:hover {
 body{
     overflow: visible;
 }
+.edit-btn{
+    background-color: orange;
+    border: none;
+    color: white;
+    padding: 5px;
+    width: 100px;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 30px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.edit-btn:hover{
+    background-color: rgb(240, 157, 3);
+}
