--- a/Styles/Shared/teacher-panel.css
+++ b/Styles/Shared/teacher-panel.css
@@ -248,6 +248,16 @@ body, html {
     border-bottom: none;
   }
   
+  /*notification*/
+.notification-message{
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: rgb(199, 0, 0);
+  position: absolute;
+  top: 10%;
+  left: 5%;
+}
 /* Responsive Media Query */
 @media (max-width: 1240px) {
     .sidebar{
