--- a/Styles/Shared/header.css
+++ b/Styles/Shared/header.css
@@ -82,23 +82,29 @@ header{
 .button-premium button:hover{
   color: #4CC9FE;
 }
-@media (max-width: 700px) {
+@media (max-width: 935px) {
   .svg-logo{
     width: 200px;
     margin-left: -50px;
   }
   header{
-    grid-template-columns: 200px 8fr;
+    grid-template-columns: 200px 8fr 1fr;
     width: 100%;
   }
 }
-@media (max-width: 636px) {
-  .links a{
-    margin-left: 0;
+@media (max-width: 678px) {
+  header .links a{
+    margin-left: 20px;
     margin-right: 35px;
   }
+  header{
+    grid-template-columns: 0.2fr 1fr;
+  }
+  header .button-premium{
+    margin-bottom: 50px;
+  }
 }
-@media (max-width: 518px) {
+@media (max-width: 564px) {
   header{
     grid-template-columns: 1fr;
   }
@@ -125,6 +131,10 @@ header{
   .links a{
     margin-left: 20px;
     margin-right: 30px;
+  }
+  .links a i{
+    font-size: 15px;
+    margin-top: 10px;
   }
 }
 @media (max-width: 414px) {
