--- a/Styles/mark-page.css
+++ b/Styles/mark-page.css
@@ -285,8 +285,20 @@ section .details span{
 
 
 
-
-  @media screen and (max-width: 450px) {
+@media(max-width: 982px){
+  .container{
+    margin-top: 100px;
+  }
+}
+@media(max-width: 546px){
+  .classroom-links {
+    margin-top: 30px;
+  }
+  .classroom-links li a{
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 450px) {
     .container-alert header {
       font-size: 40px;
     }
