--- a/Styles/Shared/header.css
+++ b/Styles/Shared/header.css
@@ -11,36 +11,47 @@ body {
   min-height: 100vh;
   background: #343f4f;
 }
-li {
+
+.links {
   list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-a{
+
+a {
   text-decoration: none;
   color: white;
 }
 
-/*Header*/
-.logo{
+/* Header Styles */
+header {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  align-items: center;
+  padding: 20px;
+}
+
+.logo {
   width: 100px;
   height: 50px;
   margin-left: 50px;
-  margin-bottom: 50px;
 }
-header{
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+
+.links {
+  display: flex;
+  justify-content: center;
 }
-.links{
-  padding-top: 40px;
+
+.links li {
+  margin: 0 20px;
 }
+
 .links a {
-  justify-content: space-around;
-  align-items: center;
-  margin-left: 50px;
-  cursor: pointer;
-  position: relative; /* To position the pseudo-element */
   padding-bottom: 5px;
-  border-bottom: 3px solid transparent; /* Transparent border to maintain the layout */
+  border-bottom: 3px solid transparent;
+  position: relative;
+  cursor: pointer;
 }
 
 .links a::after {
@@ -51,27 +62,25 @@ header{
   width: 0;
   height: 3px;
   background-color: #4CC9FE;
-  transition: width 0.3s ease; /* Adjust the duration as needed */
+  transition: width 0.3s ease;
 }
 
 .links a:hover::after {
-  width: 100%; /* Expands the line from left to right */
+  width: 100%;
 }
-.links a:hover{
+
+.links a:hover {
   color: #4CC9FE;
 }
-.links a i{
-  font-size: 30px;
+
+.button-premium {
+  display: flex;
+  justify-content: center;
 }
-.button-premium{
-  position: relative;
-}
-.button-premium button{
+
+.button-premium button {
   width: 120px;
   height: 40px;
-  position: absolute;
-  left: 50%;
-  top: 20%;
   background-color: #343f4f;
   color: white;
   font-weight: bold;
@@ -79,72 +88,76 @@ header{
   border: none;
   cursor: pointer;
 }
-.button-premium button:hover{
+
+.button-premium button:hover {
   color: #4CC9FE;
 }
+
+/* Responsive Styles */
 @media (max-width: 935px) {
-  .svg-logo{
-    width: 200px;
-    margin-left: -50px;
+  .svg-logo {
+    width: 150px;
   }
-  header{
-    grid-template-columns: 200px 8fr 1fr;
-    width: 100%;
+
+  header {
+    grid-template-columns: 150px 1fr 1fr;
+  }
+
+  .links {
+    margin-top: 20px;
   }
 }
+
 @media (max-width: 678px) {
-  header .links a{
-    margin-left: 20px;
-    margin-right: 35px;
-  }
-  header{
-    grid-template-columns: 0.2fr 1fr;
-  }
-  header .button-premium{
-    margin-bottom: 50px;
-  }
-}
-@media (max-width: 564px) {
-  header{
+  header {
     grid-template-columns: 1fr;
-  }
-  .links{
-    padding-top: 0;
-    margin-left: 20px;
-  }
-  .logo{
-    width: 100%;
-    align-self: center;
     text-align: center;
   }
-  .svg-logo{
-    width: 300px;
-    margin-left: -50px;
+
+  .logo {
+    margin-left: 0;
   }
-  .links a{
-    font-size: 20px;
-    margin-left: 20px;
-    margin-right: 40px;
+
+  .button-premium {
+    margin-top: 20px;
   }
 }
+
+@media (max-width: 564px) {
+  header {
+    grid-template-columns: 1fr;
+  }
+
+  .links {
+    flex-direction: column;
+  }
+
+  .links a {
+    margin-bottom: 10px;
+  }
+
+  .logo {
+    width: 100%;
+    text-align: center;
+  }
+
+  .svg-logo {
+    width: 200px;
+  }
+}
+
 @media (max-width: 452px) {
-  .links a{
-    margin-left: 20px;
-    margin-right: 30px;
+  .links a {
+    font-size: 18px;
   }
-  .links a i{
-    font-size: 15px;
-    margin-top: 10px;
-  }
-}
-@media (max-width: 414px) {
-  .links a{
-    margin-left: 10px;
-    margin-right: 30px;
+
+  .links a i {
+    font-size: 16px;
   }
 }
+
 @media (max-width: 364px) {
-  .links a i{
-    font-size: 25px;
+  .links a i {
+    font-size: 20px;
   }
 }
