--- a/Styles/Shared/header.css
+++ b/Styles/Shared/header.css
@@ -1,19 +1,18 @@
-/* General Styles */
+/*General*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", Poppin;
 }
-
 body {
-  display: flex;
+  align-items: center;
   justify-content: center;
   min-height: 100vh;
   background: #343f4f;
 }
 
-ul {
+.links {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -37,6 +36,7 @@ header {
   width: 100px;
   height: 50px;
   margin-left: 50px;
+  margin-top: -50px;
 }
 
 .links {
@@ -98,6 +98,7 @@ header {
 @media (max-width: 935px) {
   .svg-logo {
     width: 150px;
+    margin-left: 0;
   }
 
   header {
