--- a/Styles/Shared/header.css
+++ b/Styles/Shared/header.css
@@ -17,6 +17,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 10px; /* Add spacing between links */
 }
 
 a {
@@ -50,6 +51,7 @@ header {
 
 .links a {
   padding-bottom: 5px;
+  margin-bottom: 10px;
   border-bottom: 3px solid transparent;
   position: relative;
   cursor: pointer;
@@ -61,7 +63,7 @@ header {
   left: 0;
   bottom: 0;
   width: 0;
-  height: 3px;
+  height: 1px;
   background-color: #4CC9FE;
   transition: width 0.3s ease;
 }
@@ -107,6 +109,11 @@ header {
 
   .links {
     margin-top: 20px;
+    gap: 15px; /* Increase gap if needed */
+  }
+
+  .links a {
+    margin-top: 10px;
   }
 }
 
@@ -132,12 +139,12 @@ header {
 
   .links {
     flex-direction: column;
+    gap: 15px; /* Add gap between links */
   }
 
   .links a {
     margin-bottom: 10px;
     margin-top: 10px;
-
   }
 
   .logo {
