--- a/Styles/Shared/alert-box.css
+++ b/Styles/Shared/alert-box.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -7,7 +6,7 @@
 }
 .alert_box,
 .show_button {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -30,7 +29,7 @@
   background: #2573a7;
 }
 .background {
-  position: absolute;
+  position: fixed;
   height: 100%;
   width: 100%;
   top: 0;
