--- a/Styles/teacher-inbox.css
+++ b/Styles/teacher-inbox.css
@@ -1,5 +1,16 @@
 
 
+/* For WebKit-based browsers (Chrome, Safari, Edge) */
+.chat-body::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+}
+
+.chat-body::-webkit-scrollbar-thumb {
+    background-color: #000000; /* Color of the scrollbar thumb */
+    border-radius: 4px; /* Rounded edges for the thumb */
+}
+
+
 .chat-container {
     display: flex;
     flex-direction: column;
@@ -21,8 +32,8 @@
 }
 
 .teacher-avatar {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     border: 2px solid #ffffff;
 }
