--- a/Styles/mark-page.css
+++ b/Styles/mark-page.css
@@ -281,7 +281,10 @@ section .details span{
 .uploaded-area i.fa-check{
   font-size: 16px;
 }
-
+#deadlineTimer{
+  color: white;
+  font-weight: bold;
+}
 
 
 
